--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>石井ピアノ教室</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header Section with Navigation -->
@@ -16,6 +19,7 @@
                 <li><a href="#about">教室の紹介</a></li>
                 <li><a href="#lessons">レッスン内容</a></li>
                 <li><a href="#teacher">講師紹介</a></li>
+                <li><a href="#faq">よくある質問</a></li>
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
@@ -59,6 +63,23 @@
         <div class="teacher-info">
             <img src="teacher.jpg" alt="講師 石井">
             <p>石井先生は、音楽大学卒業後、国内外で活躍。ピアノ教育の専門家として多くの生徒を指導しています。</p>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq">
+        <h2>よくある質問</h2>
+        <div class="faq-item">
+            <h3>Q: 初心者でも大丈夫ですか？</h3>
+            <p>A: はい、初心者の方でも安心して学べるコースをご用意しています。</p>
+        </div>
+        <div class="faq-item">
+            <h3>Q: レッスンは何歳から受けられますか？</h3>
+            <p>A: 幼児向けコースは4歳からご参加いただけます。</p>
+        </div>
+        <div class="faq-item">
+            <h3>Q: 大人でも受講可能ですか？</h3>
+            <p>A: はい、全ての年齢層の方が受講できます。</p>
         </div>
     </section>
 
