--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Header Section with Navigation -->
@@ -18,7 +19,6 @@
                 <li><a href="#home">ホーム</a></li>
                 <li><a href="#about">教室の紹介</a></li>
                 <li><a href="#lessons">レッスン内容</a></li>
-                <li><a href="#teacher">講師紹介</a></li>
                 <li><a href="#faq">よくある質問</a></li>
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
@@ -57,14 +57,6 @@
         </div>
     </section>
 
-    <!-- Teacher Section -->
-    <section id="teacher">
-        <h2>講師紹介</h2>
-        <div class="teacher-info">
-            <img src="teacher.jpg" alt="講師 石井">
-            <p>石井先生は、音楽大学卒業後、国内外で活躍。ピアノ教育の専門家として多くの生徒を指導しています。</p>
-        </div>
-    </section>
 
     <!-- FAQ Section -->
     <section id="faq">
@@ -86,23 +78,17 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>お問い合わせ</h2>
-        <form action="#" method="post">
-            <label for="name">お名前</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">メールアドレス</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">メッセージ</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">送信</button>
-        </form>
+		<!-- Instagram Link -->
+		<div class="social-media">
+			<a href="https://www.instagram.com/your_instagram" target="_blank">
+				<i class="fab fa-instagram"></i> Instagram
+			</a>
+		</div>
     </section>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 石井ピアノ教室 | プライバシーポリシー</p>
+        <p>&copy; 2024 石井ピアノ教室</p>
     </footer>
 </body>
 </html>
