changed menu bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header Section with Navigation -->
     <header>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="#home">ホーム</a></li>
                 <li><a href="#about">教室の紹介</a></li>
                 <li><a href="#lessons">レッスン内容</a></li>
