changed insta account

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2>お問い合わせ</h2>
 		<!-- Instagram Link -->
 		<div class="social-media">
-			<a href="https://www.instagram.com/your_instagram" target="_blank">
+			<a href="https://www.instagram.com/koishii1138/" target="_blank">
 				<i class="fab fa-instagram"></i> Instagram
 			</a>
 		</div>
