added home fade in

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <!-- Main Section with Hero Image -->
-    <section id="home">
+    <section id="home" class="fade-in">
         <div class="hero">
             <h1>石井ピアノ教室</h1>
             <p>クラシックからポップスまで、あなたに合ったレッスンを提供します</p>
