changed button pos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="home" class="fade-in">
         <div class="hero">
             <h1>石井ピアノ教室</h1>
-            <p>クラシックからポップスまで、あなたに合ったレッスンを提供します</p>
+			<p>クラシックからポップスまで、あなたに合ったレッスンを提供します</p><br><br><br>
             <a href="#contact" class="button">お問い合わせ</a>
         </div>
     </section>
